2010-05-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py: Added tooltips on the photo source
	  treeview (issue #57).

2010-05-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimagegtk.py, gphotoframe.schemas.in: Added new gconf key
	  'date_format'.
	* flickr, fspot, picasa, photoimagegtk.py: Added date taken on
	  tooltips.

2010-05-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py, api.py: Added checking authorization.
	* tumblr.py: Added checking authorization.
	* config.py: Added get_list & set_list.
	* preferences.py, plugins/__init__.py: Added plugin on/off function.

2010-05-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* rss.py: Fixed class of URL (unicode -> str).
	* utils/urlgetautoproxy.py: Added new class UrlgetWithAutoProxy.
	  Code refactoring.  pacparser -> libproxy.
	* flickr/__init__.py, api.py: Added new gconf key
	  'plugins/flickr/interval_for_meta_group'.
	* flickr/api.py: Added a random group pickup method among 'The Commons'.
	
2010-05-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/api.py: Added a random group pickup method among 'Your Groups'.
	* photoimagegtk.py: Added image size filter.
	  Changed gconf key names: aspect_* -> filter/aspect_*.
	  Added image file size filter.

2010-05-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe.schemas.in: Fixed the default value of 'ui/geo/position'.
	* NEWS: 0.7.2 release.
	* setup.py: Fixed the permission of share/rss-16.png.
	* NEWS: 0.7.1 release.
	* iconimage.py (IconImage): Fixed a F-Spot icon loading bug
	  (issue #50).

2010-05-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py (Preferences.start): Set default value for
	  the 'window_sticky' gconf key (issue #49).

2010-05-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* te.po: Added new translation.  Thanks Veeven!
	* NEWS: 0.7 release.

2010-04-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, photoimagegtk.py, photoliststore.py, base.py: