@@ -1,3 +1,8 @@
+2010-05-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* rss.py: Added support weighted random for each rss feed in mixed
+	  rss feeds.
+
 2010-05-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* preferences.py: Added tooltips on the photo source
